# jags-alcove

./: .hgtags  Makefile.am  README  README.rst  configure.ac
example/Python/: alcove.py  alcove_agg_model.py  alcove_model.py  data.py
example/R/: hi_model.txt  kruschke.R  kruschke_all.R  kruschke_analysis.R  kruschke_indiff.R
example/R/data/: Kruschke1993CSfilconData.txt  create_table.R  kruschke.txt
src/: Makefile.am  alcove.cc
src/functions/: ALCOVEfunc.cc  ALCOVEfunc.h  Makefile.am
win/: README.WIN  jags.nsi
